css/main.css
main {
  font-family: 'Open Sans', sans-serif;
  color: #fff;
}

.blue-box {
  background-color: #003fff;
}

h1, li, a {
  font-family: 'Quicksand', sans-serif;
  color: #fff;
}

.btn {
  background-color: #F16F53;
  border-style: none;
  border-radius: 15px;
}

a {
  text-decoration: none;
}

.chewy {
  background-image: url("../images/chewy.jpg");
  background-position: center;
  background-size: cover;
  width: 100vw;
  height: 80vh;
  background-repeat: no-repeat;
}

@media only screen and (min-width: 25em) {
  .chewy {
    background-image: url("../images/chewy.jpg");
    background-position: center;
    background-size: cover;
    width: 100vw;
    height: 50vh;
    background-repeat: no-repeat;
  }

  .nav-box {
    position: relative;
    top: 0;
    xwidth: 100%;
  }

  .nav {
    display: none;
    position: absolute;
    right: 0;
    top: 100%;
    background-color: rgba(15, 64, 172, 0.75);
    width: 100%;
  }

  .nav li:hover {
    background-color: #F16F53;
  }

  .nav-check {
    position: absolute;
    top: -3em;
  }

  .nav-check:checked ~ .nav {
  display: block;
  }

  .nav-label {
    cursor: pointer;
    width: 40px;
    display: inline-block;
    position: absolute;
    right: 2em;
    top: 1.6em;
  }

  .nav-label img {
    display: block;
    width: 100%;
  }

  .nav-check:checked ~ .nav-label {
    background-color: #0029a7;
    padding: 3px;
    border-radius: 3px;
  }

  .name {
    width: 11em;
  }

  @media only screen and (min-width: 60em) {
    .chewy {
      background-image: url("../images/chewy.jpg");
      background-position: right center;
      background-size: cover;
      width: 40vw;
      height: 100vh;
      background-repeat: no-repeat;
    }

  }

